<?xml version="1.0"?>
<package format="3">
    <name>virtual_costmap_layer</name>
    <version>0.2.0</version>
    <description>virtual_costmap_layer package</description>
    <maintainer email="mahmoud.ghorbel@hotmail.com">MG</maintainer>
    <license>TODO</license>
    <!--  -->
    <buildtool_depend>catkin</buildtool_depend>
    <!--  -->
    <depend>costmap_2d</depend>
    <depend>dynamic_reconfigure</depend>
    <depend>geometry_msgs</depend>
    <depend>message_generation</depend>
    <depend>roscpp</depend>
    <depend>tf</depend>
    <!--  -->
    <exec_depend>message_runtime</exec_depend>
    <!--  -->
    <export>
        <costmap_2d plugin="${prefix}/plugins/costmap_plugins.xml" />
    </export>
</package>
